# test-deploy

./: README.md  asset-manifest.json  docker-compose.yml  index.html
backend/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/DataVizUploader/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
backend/DataVizUploader/management/commands/: initadmin.py
backend/DataVizUploader/migrations/: 0001_initial.py  0002_alter_financialfile_file.py
backend/api/: settings.py  urls.py
backend/uploads/uploads/: big-minus.csv  big-minus_HwX6Smd.csv  cas2_Wg87xEY.csv  case_IFLC0Ft.csv  decimal-test_-_Sheet1_mOml4Nd.csv  different-order-not-months-test_bx5ZUJo.csv  example.csv  minus_nYIfQCq.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  config.js
frontend/src/components/: AnalyticsDashboard.js  AnalyticsDashboard.module.css  Charts.js  Charts.module.css  CircularProgressWithLabel.js  DeleteCard.js  DeleteCard.module.css  FileTab.js  FileTab.module.css  Form.js  Form.module.css  Tab.js  Tab.module.css  utils.js
static/css/: main.42752555.css  main.42752555.css.map
static/js/: main.2551e4f1.js  main.2551e4f1.js.map  main.49f948be.js  main.49f948be.js.map  main.687f03fd.js  main.687f03fd.js.LICENSE.txt  main.687f03fd.js.map  main.7666933d.js  main.7666933d.js.map  main.8d602aab.js  main.8d602aab.js.map  main.e94c9a8d.js  main.e94c9a8d.js.map
